Add basic data layer, API connections, and basic UI elements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,20 @@
 {
     "cSpell.words": [
+        "artic",
         "CFLAGS",
         "CPLUSPLUSFLAGS",
         "DFOLLY",
         "iphoneos",
         "jbotero",
         "LIBCPP",
+        "lqip",
         "objcpp",
+        "passcode",
+        "persistor",
         "Podfile",
-        "xcode"
+        "reduxjs",
+        "rsvp",
+        "xcode",
+        "Xlink"
     ]
 }
