--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "react-native start",
     "test": "jest",
     "pod": "npx pod-install ios",
-    "xcode": "xed ios/"
+    "xcode": "xed ios/",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
@@ -17,7 +18,11 @@
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.1",
+    "color-convert": "^2.0.1",
     "date-fns": "^2.29.3",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "patch-package": "^6.5.1",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-gesture-handler": "^2.9.0",
