--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios --simulator='iPhone 14 (16.2)'",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --collectCoverage",
     "pod": "npx pod-install ios",
     "xcode": "xed ios/",
     "postinstall": "patch-package"
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
