Add local Push notifications system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "jbotero",
         "LIBCPP",
         "lqip",
+        "notifee",
         "objcpp",
         "passcode",
         "persistor",
