--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.4.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
