--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@notifee/react-native": "^7.4.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/native": "^6.1.3",
-    "@react-navigation/stack": "^6.3.12",
+    "@react-navigation/native": "6.0.10",
+    "@react-navigation/stack": "6.2.1",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.1",
     "color-convert": "^2.0.1",
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-snap-carousel": "^3.9.1",
@@ -43,21 +44,25 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-mock-store": "^1.0.3",
+    "add": "^2.0.6",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-testing-library": "^6.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
-  },
-  "jest": {
-    "preset": "react-native"
+    "redux-mock-store": "^1.5.4",
+    "typescript": "4.8.4",
+    "yarn": "^1.22.19"
   }
 }
