--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-mock-store": "^1.0.3",
     "add": "^2.0.6",
+    "axios-mock-adapter": "^1.21.2",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
