--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-error-boundary": "^1.2.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.6.2",
